--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
  
   <body>
-    Hello Dunia
+    <img src="images/einstein.gif" alt="profile image" />
+   <h2>Albert Einstein</h2>
   </body>
  
 </html>
