--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
   </head>
  
-  <body>
-    <img src="images/einstein.gif" alt="profile image" />
-   <h2>Albert Einstein</h2>
+  <body id="profile-container">
+    <img id="profile-image" src="images/einstein.gif" alt="profile image" />
+   <h2 id="profile-name">Albert Einstein</h2>
   </body>
  
 </html>
