added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body id="profile-container">
     <img id="profile-image" src="images/einstein.gif" alt="profile image" />
    <h2 id="profile-name">Albert Einstein</h2>
+   <div id="footer">Footer</div>
   </body>
  
 </html>
