fix id profile-container position

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <link rel="stylesheet" href="style.css">
   </head>
  
-  <body id="profile-container">
-    <img id="profile-image" src="images/einstein.gif" alt="profile image" />
-   <h2 id="profile-name">Albert Einstein</h2>
-   <div id="footer">Footer</div>
+  <body>
+        <div id="profile-container">
+            <img id="profile-image" src="images/einstein.gif" alt="profile image" />
+            <h2 id="profile-name">Albert Einstein</h2>
+        </div>
+        <div id="footer">Footer</div>
   </body>
  
 </html>
